tests/invalid/for_loop_complex_target/main.py
xs: list[int] = [1, 2, 3]
for a, b in xs:
    print(a)
